2014-08-21  Manuel López-Ibáñez  <manu@gcc.gnu.org>

	PR fortran/44054
	* diagnostic.c (default_diagnostic_finalizer): Move caret printing
	 to here ...
	(diagnostic_report_diagnostic): ... from here.
	* toplev.c (general_init): Move code to c-family.

2014-08-20  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	* df.h (web_entry_base): Replace existing struct web_entry with a
	new class web_entry_base with only the predecessor member.
	(unionfind_root): Remove declaration and move to class member.
	(unionfind_union): Remove declaration and move to friend
	function.
	(union_defs): Remove declaration.
	* web.c (web_entry_base::unionfind_root): Modify to be member
	function and adjust accessors.
	(unionfind_union): Modify to be friend function and adjust
	accessors.
	(web_entry): New subclass of web_entry_base containing the reg
	member.
	(union_match_dups): Modify for struct -> class changes.
	(union_defs): Likewise.
	(entry_register): Likewise.
	(pass_web::execute): Likewise.

2014-08-20  Bill Schmidt  <wschmidt@vnet.ibm.com>

	* config/rs6000/rs6000-c.c (rs6000_cpu_cpp_builtins): Provide
	builtin define __VEC_ELEMENT_REG_ORDER__.

2014-08-20  Martin Jambor  <mjambor@suse.cz>
	    Wei Mi  <wmi@google.com>

	PR ipa/60449
	PR middle-end/61776
	* tree-ssa-operands.c (update_stmt_operands): Remove
	MODIFIED_NORETURN_CALLS.
	* tree-cfgcleanup.c (cleanup_call_ctrl_altering_flag): New func.
	(cleanup_control_flow_bb): Use cleanup_call_ctrl_altering_flag.
	(split_bb_on_noreturn_calls): Renamed from split_bbs_on_noreturn_calls.
	(cleanup_tree_cfg_1): Use split_bb_on_noreturn_calls.
	* tree-ssanames.h: Remove MODIFIED_NORETURN_CALLS.
	* gimple.h (enum gf_mask): Add GF_CALL_CTRL_ALTERING.
	(gimple_call_set_ctrl_altering): New func.
	(gimple_call_ctrl_altering_p): Ditto.
	* tree-cfg.c (gimple_call_initialize_ctrl_altering): Ditto.
	(make_blocks): Use gimple_call_initialize_ctrl_altering.
	(is_ctrl_altering_stmt): Use gimple_call_ctrl_altering_p.